# LocalnetInspector

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release-dmg.yml
scripts/: build_app.sh  build_dmg.sh  com.localnetinspector.agent.plist.example  run_with_sudo.sh
src/localnet_inspector/: __main__.py
src/localnet_inspector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/localnet_inspector/core/: dhcp_sniffer.py  enrichment.py  fingerprints.py  models.py  network.py  scapy_runtime.py  storage.py
src/localnet_inspector/ui/: app.py
